feat: add conversation management, system prompt, usage stats, model params hot-tuning
- PostgreSQL 18-bookworm via Docker (deepseek-chat-pg container)
- JDBC ChatMemoryRepository replaces InMemoryChatMemory
- Spring Data JPA for business tables (system_prompt, model_params, token_usage)
- ConversationController: list/clear/export conversations
- PromptController: per-model system prompt CRUD via API
- ModelParamsController: dynamic temperature/maxTokens/topP adjustment
- UsageController: token usage tracking with model/conversation aggregation
- ChatService: integrates system prompt injection, dynamic params, usage recording
- All features work without restart